--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-navigation-bar": "^5.0.9",
     "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -40,7 +41,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "reanimated-color-picker": "^4.1.1",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
